--- a/index.html
+++ b/index.html
@@ -1,3 +1,62 @@
-<tesT>
-  
-</tesT>
+<!DOCTYPE HTML>
+<html>
+
+<head>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+
+        <div class="container">
+  <div class="row">
+    <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading open">Panel heading without title</div>
+              <div class="panel-body">
+                <table class="no-dec">
+                        <tr>
+                                <td>
+                                        <i class="fa fa-thermometer-empty" aria-hidden="true"></i>
+                                </td>
+                                <td>
+                                        <i class="fa fa-tint" aria-hidden="true"></i>
+                                </td>
+                                <td>
+                                        <i class="fa fa-male" aria-hidden="true"></i>
+
+                                </td>
+                        </tr>
+                        <tr>
+                                <td>
+                                        76f
+                                </td>
+                                <td>
+                                        44%
+                                </td>
+                                <td>
+                                        No
+                                </td>
+                        </tr>
+                </table>
+                <div class="card-bttn">
+                        <button type="button" class="btn btn-success">Open</button>
+                        <button type="button" class="btn btn-primary">Edit</button>
+                </div>
+              </div>
+            </div>
+    </div>
+    <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading closed">Panel heading without title</div>
+              <div class="panel-body">
+                Panel content
+              </div>
+            </div>
+    </div>
+  </div>
+  </div>
+
+</body>
+
+</html>
