--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
 <body>
@@ -12,30 +13,70 @@
   <div class="row">
     <div class="col-md-4">
             <div class="panel panel-default">
-              <div class="panel-heading open">Panel heading without title</div>
+              <div class="panel-heading open">Home 1 is open</div>
               <div class="panel-body">
                 <table class="no-dec">
                         <tr>
-                                <td>
-                                        <i class="fa fa-thermometer-empty" aria-hidden="true"></i>
+                                <td class="card-td">
+                                        <h2><i class="fa fa-thermometer-empty" aria-hidden="true"></i></h2>
                                 </td>
-                                <td>
-                                        <i class="fa fa-tint" aria-hidden="true"></i>
+                                <td class="card-td">
+                                        <h2><i class="fa fa-tint" aria-hidden="true"></i></h2>
                                 </td>
-                                <td>
-                                        <i class="fa fa-male" aria-hidden="true"></i>
+                                <td class="card-td">
+                                        <h2><i class="fa fa-male" aria-hidden="true"></i></h2>
 
                                 </td>
                         </tr>
                         <tr>
-                                <td>
-                                        76f
+                                <td class="card-td">
+                                        <h2>76f</h2>
                                 </td>
-                                <td>
-                                        44%
+                                <td class="card-td">
+                                        <h2>44%</h2>
                                 </td>
-                                <td>
-                                        No
+                                <td class="card-td">
+                                        <h2>no</h2>
+                                </td>
+                        </tr>
+                </table>
+                <div class="card-bttn">
+                        <button type="button" class="btn btn-success">Open</button>
+                        <button type="button" class="btn btn-primary">Edit</button>
+                        <!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
+
+                </div>
+              </div>
+            </div>
+    </div>
+    <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading open">Home 2 is closed</div>
+              <div class="panel-body">
+                <table class="no-dec">
+                        <tr>
+                                <td class="card-td">
+                                        <h2><i class="fa fa-thermometer-empty" aria-hidden="true"></i></h2>
+                                </td>
+                                <td class="card-td">
+                                        <h2><i class="fa fa-tint" aria-hidden="true"></i></h2>
+                                </td>
+                                <td class="card-td">
+                                        <h2><i class="fa fa-male" aria-hidden="true"></i></h2>
+
+                                </td>
+                        </tr>
+                        <tr>
+                                <td class="card-td">
+                                        <h2>76f</h2>
+                                </td>
+                                <td class="card-td">
+                                        <h2>44%</h2>
+                                </td>
+                                <td class="card-td">
+                                        <h2>no</h2>
                                 </td>
                         </tr>
                 </table>
@@ -46,17 +87,28 @@
               </div>
             </div>
     </div>
-    <div class="col-md-4">
-            <div class="panel panel-default">
-              <div class="panel-heading closed">Panel heading without title</div>
-              <div class="panel-body">
-                Panel content
-              </div>
-            </div>
-    </div>
   </div>
   </div>
 
+  <div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Modal Header</h4>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the modal.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </body>
 
 </html>
