--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
 
+
+
         <div class="container">
   <div class="row">
     <div class="col-md-4">
@@ -42,9 +44,7 @@
                 </table>
                 <div class="card-bttn">
                         <button type="button" class="btn btn-success">Open</button>
-                        <button type="button" class="btn btn-primary">Edit</button>
-                        <!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+                        <button type="button" class="btn btn-primary" id="edit">Edit</button>
 
 
                 </div>
@@ -90,25 +90,49 @@
   </div>
   </div>
 
-  <div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
 
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+  <!--  Modal -->
+  <div id="edit-modal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
       </div>
-
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      
     </div>
-  </div>
+    </div>
+<script>
+// Get the modal
+var modal = document.getElementById('edit-modal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("edit");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal
+btn.onclick = function() {
+modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+if (event.target == modal) {
+modal.style.display = "none";
+}
+}
+</script>
 </body>
 
 </html>
