--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-
+        <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">Garage Company</a>
+            </div>
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Doors</a></li>
+              
+            </ul>
+          </div>
+        </nav>
 
 
         <div class="container">
@@ -82,8 +92,17 @@
                 </table>
                 <div class="card-bttn">
                         <button type="button" class="btn btn-success">Open</button>
-                        <button type="button" class="btn btn-primary">Edit</button>
+                        <button type="button" class="btn btn-primary" id="edit2">Edit</button>
                 </div>
+              </div>
+            </div>
+    </div>
+    <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading open">New</div>
+              <div class="panel-body">
+
+                        <h1>+</h1>
               </div>
             </div>
     </div>
@@ -103,7 +122,7 @@
       <div class="modal-body">
         <p>Some text in the modal.</p>
       </div>
-      
+
     </div>
     </div>
 <script>
@@ -112,6 +131,7 @@ var modal = document.getElementById('edit-modal');
 
 // Get the button that opens the modal
 var btn = document.getElementById("edit");
+
 
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
