--- a/registration.html
+++ b/registration.html
@@ -2,21 +2,70 @@
 <html>
 <head>
 <title>Page Title</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-<link rel="stylesheet" href=css.css/>
-
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="css.css"/>
 </head>
+
+
 <body>
 <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand" href="#">Navbar</a>
 </nav>
+<div class="container">
+  <div class="col-md-12 text-center test">
+      <h1>Garage Door Opener Company</h1>
+      <!-- <div class="btn-group"> -->
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up</button>
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#logInModal">Login</button>
+        <!-- Sign Up Modal -->
+        <div class="modal fade" id="signUpModal" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title text-center">Sign Up</h4>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                <label for="email_address">Email Address:</label>
+                  <input type="email" class="form-control" id="email_address" />
+                </div>
 
-<div class="col-md-12 text-center test">
-    <h1>Garage Door Opener Company</h1>
-    <div class="btn-group">
-      <a href="#" class="btn btn-primary">Sign Up</a>
-      <a href="#" class="btn btn-default">Login</a>
-    </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+<!--End of Sign up Modal  -->
+<!--Login Modal  -->
+        <div class="modal fade" id="logInModal" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title text-center">Login</h4>
+              </div>
+              <div class="modal-body">
+                <p>Some text in the modal.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+<!--End of Login Modal  -->
+
+
+</div>
 </div>
 
 
