--- a/registration.html
+++ b/registration.html
@@ -16,7 +16,7 @@
   <a class="navbar-brand" href="#">Navbar</a>
 </nav>
 <div class="container">
-  <div class="col-md-12 text-center test">
+  <div class="col-md-12 text-center moveCenter">
       <h1>Garage Door Opener Company</h1>
       <!-- <div class="btn-group"> -->
         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up</button>
@@ -30,11 +30,18 @@
                 <h4 class="modal-title text-center">Sign Up</h4>
               </div>
               <div class="modal-body">
-                <div class="form-group">
-                  <label for="email_address">Email Address:</label>
-                  <input type="email" class="form-control" id="email_address" />
+                <div class="form-inline">
+                  <div class="form-group test">
+                    <label for="email_address">Email Address:</label>
+                    <input type="email" class="form-control" id="email_address" />
+                  </div>
+                  </div>
+                <div class="form-inline">
+                  <div class="form-group test">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" />
+                  </div>
                 </div>
-
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
