--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
@@ -53,8 +55,30 @@
                         </tr>
                 </table>
                 <div class="card-bttn">
-                        <button type="button" class="btn btn-success">Open</button>
-                        <button type="button" class="btn btn-primary" id="edit">Edit</button>
+                        <button type="button" class="btn btn-success" > Open</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#edit-modal">Edit</button>
+
+                                                        <!-- Modal -->
+                                <div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                  <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                          <span aria-hidden="true">&times;</span>
+                                        </button>
+                                      </div>
+                                      <div class="modal-body">
+                                        ...
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+
 
 
                 </div>
@@ -92,7 +116,7 @@
                 </table>
                 <div class="card-bttn">
                         <button type="button" class="btn btn-success">Open</button>
-                        <button type="button" class="btn btn-primary" id="edit2">Edit</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#edit-modal">Edit</button>
                 </div>
               </div>
             </div>
@@ -102,7 +126,8 @@
               <div class="panel-heading open">New</div>
               <div class="panel-body">
 
-                        <h1>+</h1>
+
+                        <button type="button" class="btn btn-default" id="new-btn">+</button>
               </div>
             </div>
     </div>
@@ -110,49 +135,8 @@
   </div>
 
 
-  <!--  Modal -->
-  <div id="edit-modal" class="modal">
-
-    <!-- Modal content -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
-
-    </div>
-    </div>
-<script>
-// Get the modal
-var modal = document.getElementById('edit-modal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("edit");
 
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks on the button, open the modal
-btn.onclick = function() {
-modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-if (event.target == modal) {
-modal.style.display = "none";
-}
-}
-</script>
 </body>
 
 </html>
