--- a/registration.html
+++ b/registration.html
@@ -42,9 +42,27 @@
                     <input type="password" class="form-control" id="password" />
                   </div>
                 </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <div class="form-inline">
+                  <div class="form-group test">
+                    <label for="password">Confirm Password:</label>
+                    <input type="password" class="form-control" id="password" />
+                  </div>
+                </div>
+                <div class="form-inline">
+                  <div class="form-group test">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" class="form-control" id="phone" />
+                  </div>
+                </div>
+                <div class="form-inline">
+                  <div class="form-group test">
+                    <label for="phone">ID Number</label>
+                    <input type="number" class="form-control" id="id" />
+                  </div>
+                </div>
+                <div class="pad">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Enter</button>
+               </div>
               </div>
             </div>
           </div>
@@ -60,10 +78,24 @@
                 <h4 class="modal-title text-center">Login</h4>
               </div>
               <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <div class="form-inline">
+                  <div class="form-group test">
+                    <label for="email_address">Email Address:</label>
+                    <input type="email" class="form-control" id="email_address" />
+                  </div>
+                  </div>
+                <div class="form-inline">
+                  <div class="form-group test">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" />
+                  </div>
+                </div>
+                <div class="pad">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Enter</button>
+               </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
               </div>
             </div>
           </div>
