--- a/registration.html
+++ b/registration.html
@@ -89,17 +89,44 @@
                   </div>
                 </div>
                 <div class="pad">
+                  <button type="button" class="btn close" data-dismiss="modal" data-toggle="modal" data-target="#forgotModal">Forgot Password?</button>
+                </div>
+                <div class="pad">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Enter</button>
                </div>
               </div>
-              <div class="modal-footer">
-                <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
-              </div>
+<!-- Forgot Pw modal -->
+  <div class="modal fade" id="forgotModal" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title text-center">Login</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-inline">
+            <div class="form-group test">
+              <label for="email_address">Email Address:</label>
+              <input type="email" class="form-control" id="email_address" />
+            </div>
+            </div>
+          <div class="form-inline">
+            <div class="form-group test">
+              <label for="password">Password:</label>
+              <input type="password" class="form-control" id="password" />
             </div>
           </div>
+          <div class="pad">
+            <button type="button" class="btn close" data-dismiss="modal" data-toggle="modal" data-target="#signUpModal">Forgot Password?</button>
+          </div>
+          <div class="pad">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Enter</button>
+         </div>
         </div>
-        </div>
-<!--End of Login Modal  -->
+
+
+
+<!--End of Forgot PW Modal  -->
 
 
 </div>
