cards and new door

--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
 
         <div class="card-btns">
                 <button class="card-delta-state">Open</button>
-                <button class="card-edit">Edit</button>
+                <a href="edit.html"><button class="card-edit">Edit</button></a>
         </div>
 </div>
 <div class="card">
@@ -90,8 +90,16 @@
 
         <div class="card-btns">
                 <button class="card-delta-state">Open</button>
-                <button class="card-edit">Edit</button>
+                <a href="edit.html"><button class="card-edit">Edit</button></a>
         </div>
+</div>
+<div class="card">
+        <div class="card-title">New Door</div>
+
+        <div class="new-card-content">
+                <a class="new-card-link" href="new.html"><h1>+</h1></a>
+        </div>
+
 </div>
 </body>
 </html>
