--- a/createAccount.html
+++ b/createAccount.html
@@ -41,8 +41,7 @@
     <label for="phone">ID Number</label>
     <input type="number" class="form-control" id="id" />
   </div>
-
-  <button type="submit">Create Account</button>
+  <a href="main.html"><button type="submit">Create Account</button></a>
 
 </form>
 </div>
