--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
   </div>
   <i><a id="forgot" href="forgot.html">Forgot Password?</a></i>
 <br />
-  <button type="submit">Login</button>
+  <a href="main.html"><button type="submit">Login</button></a>
 
 </form>
 </div>
