--- a/resetpw.html
+++ b/resetpw.html
@@ -31,7 +31,7 @@
 
   <label for="pw">Confirm Password:</label>
   <input type="password" id="pw"/>
-  <button type="submit">Reset</button>
+  <a href="login.html"><button type="submit">Reset</button></a>
 
 </form>
 </div>
