--- a/forgot.html
+++ b/forgot.html
@@ -23,7 +23,7 @@
 <form>
   <label for="email">Email Address:</label>
   <input type="email" id="email"/>
-  <button type="submit">Request</button>
+  <a href="resetpw.html"><button type="submit">Request</button></a>
 </form>
 </div>
 
