main.html style

--- a/edit.html
+++ b/edit.html
@@ -82,7 +82,7 @@
                             </label>
 
                 </div>
-                <button class="form-submit">Save Changes</button>
+                <a href="main.html"><button class="form-submit">Save Changes</button></a>
         </div>
 </body>
 
