--- a/new.html
+++ b/new.html
@@ -82,7 +82,7 @@
                             </label>
 
                 </div>
-                <button class="form-submit">Create Door</button>
+                <a href="main.html"><button class="form-submit">Create Door</button></a>
         </div>
 </body>
 
