--- a/new.html
+++ b/new.html
@@ -64,6 +64,12 @@
                         </div>
                 </div>
                 <div>
+                        <label>Auto open door when you are how many yards away? (0 turns this off) </label>
+                        <div>
+                                <input class="yard-input" type="number" value="400" > yards
+                        </div>
+                </div>
+                <div>
 
 
                         <h3>Mobile Alerts?</h3>
