--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+        <meta charset="UTF-8">
         <title>IoT Garage Door</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
@@ -28,7 +29,8 @@
     <label for="pw">Password:</label>
     <input type="password" id="pw"/>
   </div>
-  <i><a id="forgot" href="forgot.html">Forgot Password?</a></i>
+  <i><a id="forgot" href="forgot.html">Forgot Password?</a></i><br />
+  <i><a id="forgot" href="createAccount.html">Create an Account</a></i>
 <br />
   <a href="main.html"><button type="submit">Login</button></a>
 
