--- a/edit.html
+++ b/edit.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+        <meta charset="UTF-8">
         <title>Edit Door 1</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
@@ -58,7 +59,7 @@
                 </div>
 <br />
                 <div>
-                        <label>How long should the door wait to auto close(mins)?</label>
+                        <label>How long should the door wait to auto close(mins)? (0 turns this off)</label>
                         <div>
                                 <input class="num-input" type="number" value="10" id="example-number-input">
                         </div>
@@ -77,18 +78,19 @@
                       <input type="checkbox" >
                       Door Opens
                     </label>
-                        <label c>
+                        <label>
                           <input type="checkbox" >
                           Door Closes
                         </label>
                         <br />
                         <label>
                               <input type="checkbox" >
-                              Door Open For:<input class="num-input" type="number" value="10" id="example-number-input">mins
+                              Door Open For:
                             </label>
+                            <input class="num-input" type="number" value="10" > <label>mins</label>
 
                 </div>
-                <a href="main.html"><button class="form-submit">Save Changes</button></a>
+                <a href="main.html" class="no-dec-a">Save Changes</a>
         </div>
 </body>
 
