--- a/forgot.html
+++ b/forgot.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+        <meta charset="UTF-8">
         <title>IoT Garage Door</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
