--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+        <meta charset="UTF-8">
         <title>IoT Garage Door</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
@@ -24,14 +25,14 @@
                 <table class="card-table">
 
                         <tr>
-                                <td class="card-td">
-                                        <h2><i class="fa fa-thermometer-empty" aria-hidden="true"></i></h2>
+                                <td class="card-td fa-i">
+                                        <i class="fa fa-thermometer-empty" aria-hidden="true"></i>
                                 </td>
-                                <td class="card-td">
-                                        <h2><i class="fa fa-tint" aria-hidden="true"></i></h2>
+                                <td class="card-td fa-i">
+                                        <i class="fa fa-tint" aria-hidden="true"></i>
                                 </td>
-                                <td class="card-td">
-                                        <h2><i class="fa fa-male" aria-hidden="true"></i></h2>
+                                <td class="card-td fa-i">
+                                        <i class="fa fa-male" aria-hidden="true"></i>
 
                                 </td>
                         </tr>
@@ -50,9 +51,9 @@
                 </table>
         </div>
 
-        <div class="card-btns">
-                <button class="card-delta-state">Open</button>
-                <a href="edit.html"><button class="card-edit">Edit</button></a>
+        <div class="card-btns" id="open">
+                <a href="#" class="no-dec-a">Close</a>
+                <a href="edit.html" class="no-dec-a">Settings</a>
         </div>
 </div>
 <div class="card">
@@ -62,14 +63,14 @@
                 <table class="card-table">
 
                         <tr>
-                                <td class="card-td">
-                                        <h2><i class="fa fa-thermometer-empty" aria-hidden="true"></i></h2>
+                                <td class="card-td fa-i">
+                                        <i class="fa fa-thermometer-empty" aria-hidden="true"></i>
                                 </td>
-                                <td class="card-td">
-                                        <h2><i class="fa fa-tint" aria-hidden="true"></i></h2>
+                                <td class="card-td fa-i">
+                                        <i class="fa fa-tint" aria-hidden="true"></i>
                                 </td>
-                                <td class="card-td">
-                                        <h2><i class="fa fa-male" aria-hidden="true"></i></h2>
+                                <td class="card-td fa-i">
+                                        <i class="fa fa-male" aria-hidden="true"></i>
 
                                 </td>
                         </tr>
@@ -89,8 +90,8 @@
         </div>
 
         <div class="card-btns">
-                <button class="card-delta-state">Open</button>
-                <a href="edit.html"><button class="card-edit">Edit</button></a>
+                <a href="#" class="no-dec-a">Close</a>
+                <a href="edit.html" class="no-dec-a">Settings</a>
         </div>
 </div>
 <div class="card">
