all done validating

--- a/createAccount.html
+++ b/createAccount.html
@@ -32,7 +32,7 @@
   </div>
   <div class="pad">
     <label for="pw">Confirm Password:</label>
-    <input type="password" id="pw"/>
+    <input type="password"/>
   </div>
   <div class="pad">
     <label for="phone">Phone Number</label>
@@ -42,11 +42,11 @@
     <label for="phone">ID Number</label>
     <input type="number" class="form-control" id="id" />
   </div>
-  <a href="main.html"><button type="submit">Create Account</button></a>
+  <a href="main.html" class="no-dec-a">Create Account</a>
 
 
 </div>
 
-</div>
+
 </body>
 </html>
