--- a/login.html
+++ b/login.html
@@ -30,12 +30,13 @@
     <input type="password" id="pw"/>
   </div>
   <i><a id="forgot" href="forgot.html">Forgot Password?</a></i><br />
-  <i><a id="forgot" href="createAccount.html">Create an Account</a></i>
+  <i><a  href="createAccount.html">Create an Account</a></i>
 <br />
-  <a href="main.html"><button type="submit">Login</button></a>
+<br />
+  <a href="main.html" class="no-dec-a" >Login</a>
 
 </div>
 
-</div>
+
 </body>
 </html>
