--- a/forgot.html
+++ b/forgot.html
@@ -24,10 +24,10 @@
 
   <label for="email">Email Address:</label>
   <input type="email" id="email"/>
-  <a href="resetpw.html"><button type="submit">Request</button></a>
+  <a href="resetpw.html" class="no-dec-a">Request</a>
 
 </div>
 
-</div>
+
 </body>
 </html>
