--- a/resetpw.html
+++ b/resetpw.html
@@ -31,11 +31,11 @@
   <input type="password" id="pw"/>
 
   <label for="pw">Confirm Password:</label>
-  <input type="password" id="pw"/>
-  <a href="login.html"><button type="submit">Reset</button></a>
+  <input type="password" />
+  <a href="login.html" class="no-dec-a">Reset</a>
 
 </div>
 
-</div>
+
 </body>
 </html>
